# Plugins_PFA

./: README.md  TD1_Timeseries_Analysis.ipynb
plugin-moteur/: CMakeLists.txt  prototype-moteur.pro  prototype-moteur.qrc
plugin-moteur/src/: compile.bat  main.cpp
plugin-moteur/src/opengl/: mainwindow.ui  oglwidget.cpp  oglwidget.h  openglrenderer.cpp  openglrenderer.h  renderer.h  shader.frag  shader.vert  vbooglrenderer.cpp  vbooglrenderer.h
plugin-moteur/src/vulkan/: vulkan_shader.vert  vulkanrenderer.cpp  vulkanrenderer.h  vulkanwindow.cpp  vulkanwindow.h
plugin-parse/: Makefile
plugin-parse/src/: parseDAG.cpp  parseDAG.hpp  parseTasks.cpp  parseTasks.hpp  parser.cpp  test.cpp
plugin-parse/traces/: TestDag.dot  TestTask.rec  dag.dot  dag1.dot  tasks.rec  tasks1.rec
plugin-zoom/: CMakeLists.txt
plugin-zoom/src/: slicer.cpp
